# Fractal

./: CMakeLists.txt  Pixel.cpp  Pixel.h  README.md  Screen.cpp  Screen.h  main.cpp
src/: FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  RGB.h  Screen.cpp  Screen.h  Zoom.h  ZoomList.h  main.cpp
src/Editor/: RGB.cpp  Screen.cpp  Screen.h  Zoom.cpp  Zoom.h  ZoomList.cpp
src/Fractal/: FractalCreator.cpp  FractalCreator.h
src/Fractal/BrownianTreeSnowflake/: BrownianTreeSnowflake.cpp  BrownianTreeSnowflake.h
src/Fractal/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h
src/Fractal/Snowflake/: Snowflake.cpp  Snowflake.h
src/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h
src/Mandelbulb/: Mandelbulb.cpp  Mandelbulb.h
src/Snowflake/: Segment.cpp  Segment.h  Snowflake.cpp  Snowflake.h
